2003-03-27  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (.PHONY): Mention more targets.
	(check): Add check-rsh.
	(check-rsh): New target.
	* qm/extension.py (Extension._allow_arg_names_matching_class_vars): New
	variable.
	(get_class_arguments): Use it.
	* qm/test/classes/command.py
	(ExecTest._allow_arg_names_matching_class_vars): Set it.
	(ShellScriptTest._allow_arg_names_matching_class_vars): Likewise.
	* qm/test/classes/rsh_target.py
	(RSHTarget._allow_arg_names_matching_class_vars): Likewise.
	(RSHTarget.__init__): Always set "arguments".
	(RSHTarget._GetInterpreter): Fix thinko.
	* qm/test/doc/reference.xml: Mention the fact that test classes
	should not use fields with the same names as class variables in
	base classes.
	* NEWS: Mention changes.

2003-03-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (format_traceback): Tweak formatting of generated
	structured text.
	* qm/test/base.py (CouldNotLoadExtensionError): New class.
	(get_extension_class_from_directory): Use it.
	* qm/test/cmdline.py (QMTest.__ExecuteRegister): Remove explicit
	exception-handling code.
	* qm/test/database.py (TestDescriptor.__init__): Use symbolic
	constants, not hard-coded string, for prerequisites.
	(NoSuchItemError): New class.
	(NoSuchTestError): Inherit from it.
	(NoSuchSuiteError): Likewise.
	(NoSuchResourceError): Likewise.
	(Database.RESOURCE): Tweak spelling.
	(Database.SUITE): Likewise.
	(Database.TEST): Likewise.
	(Database._item_exceptions): Likewise.
	(Database.GetTest): Raise NoSuchTestError.
	(Database.GetSuite): Raise NoSuchSuiteError.
	(Database.GetResource): Raise NoSuchResourceError.
	(Database.GetItem): Implement in terms of GetTest, GetSuite, and
	GetResource.
	(Database.GetClassPaths): Do not raise an exception.
	* qm/test/file_database.py (GetItem): Remove.
	* qm/test/test.py (Test.PREREQUISITES_FIELD_ID): New variable.
	* qm/test/classes/classes.qmc: Register
	mount_database.MountDatabase.